modified:   Index.html 	new file:   blog.html 	modified:   css/format.css 	modified:   css/styles.css 	new file:   data/knowledge_sharing.json 	new file:   images/BI.jpeg 	new file:   images/Certificate.png 	new file:   images/accounting.jpeg 	new file:   images/agile.jpeg 	new file:   images/android.jpg 	new file:   images/angular.png 	new file:   images/artificial_intelligence.jpeg 	new file:   images/ba.jpeg 	new file:   images/bigdata.jpeg 	new file:   images/blockchain.jpg 	new file:   images/blogger_black.png 	new file:   images/blogger_white.png 	new file:   images/check-mark.png 	new file:   images/chemical.jpeg 	new file:   images/cloud.jpeg 	new file:   images/desktop.jpg 	new file:   images/docker.png 	new file:   images/elecrton.png 	new file:   images/excel.jpg 	new file:   images/eyes.png 	new file:   images/figma.jpeg 	new file:   images/github.png 	new file:   images/gmail.png 	new file:   images/image_processing20220121-23217-n5awbt.png 	new file:   images/internet.jpeg 	new file:   images/java.jpeg 	new file:   images/knowledge_black.png 	new file:   images/knowledge_white.png 	new file:   images/ldn.jpeg 	new file:   images/math.jpg 	new file:   images/physics.jpg 	new file:   images/powerpoint.jpg 	new file:   images/python.png 	new file:   images/reactnantive.jpeg 	new file:   images/resume_black.png 	new file:   images/resume_white.png 	new file:   images/saplogo.png 	new file:   images/security.jpeg 	new file:   images/sql.jpg 	new file:   images/statistics.jpg 	new file:   images/webscrawling.webp 	new file:   images/website.jpeg 	new file:   images/whatapp.png 	modified:   js/functions.js 	new file:   knowledge_sharing.html

--- a/css/format.css
+++ b/css/format.css
@@ -1,6 +1,5 @@
 /* 
 ------------------------------------------------------
-    Global Styles
 ------------------------------------------------------
 */
 /*color*/
@@ -28,6 +27,8 @@ body, html {
       margin: 0 auto; /* Căn giữa trang */
       padding: 0 0px; 
       box-sizing: border-box;
+      display: flex;
+      position: relative;
 
 }
 /* Common styles for headings */
@@ -72,6 +73,10 @@ header {
       padding: 1em;
       width: 16em;
       height:100%;
+}
+main {
+    margin-left: 19em;
+    max-width: 1100px;
 }
 
 /* Footer Styles */
