--- a/css/format.css
+++ b/css/format.css
@@ -11,7 +11,6 @@
       --gray-color: #D9D9D9;
   }
 /* Reset CSS */
-/* @import url("format.css"); */
 
 /* General Styles */
 body {
@@ -23,11 +22,10 @@ body, html {
       padding: 0;
   }
 .container{
-      max-width: 1440px; /* Độ rộng tối đa là 1440px */
-      margin: 0 auto; /* Căn giữa trang */
-      padding: 0 0px; 
+      max-width: 1440px; 
+      margin: 0 auto;
+      padding-bottom: 30px; 
       box-sizing: border-box;
-      display: flex;
       position: relative;
 
 }
