modified:   Index.html 	modified:   blog.html 	modified:   css/format.css 	modified:   css/styles.css 	new file:   images/bg.png 	renamed:    images/image_processing20220121-23217-n5awbt.png -> images/illus-mobile-app.png 	modified:   knowledge_sharing.html

--- a/css/format.css
+++ b/css/format.css
@@ -14,7 +14,7 @@
 
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Manjari, Helvetca, Arial, sans-serif;
 }
 body, html {
 
