--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 /* Header Styles */
@@ -91,7 +91,7 @@ nav img.icon {
 
 
 .about-me {
-  background-color: var(--gray-color);
+  background-color: var(--white-color);
   display: flex;
   padding: 10px;
   margin: 0 10px 0 0;
@@ -137,21 +137,26 @@ nav img.icon {
 }
 
 .my-skills {
+  flex: 1;
   padding: 10px;
   border-radius: 10px;
-  background-color: var(--gray-color);
+  background-color: var(--white-color);
 }
 
 .certificate {
   display: flex;
+  justify-content: space-between;
   padding: 10px;
   border-radius: 10px;
   margin: 0px 10px 0 10px;
-  background-color: var(--gray-color);
+  background-color: var(--white-color);
 }
 
 .certificate-info {
   flex: 0.7;
+}
+.my-experience{
+  flex: 2;
 }
 
 .my-projects {
@@ -159,29 +164,49 @@ nav img.icon {
 }
 
 .my-project {
-  width: 190px;
+  position: relative;
+  width: 30%;
   height: 290px;
   padding: 10px;
   margin: 10px 10px 0 10px;
-  background-color: blueviolet;
   border-radius: 10px;
+  background-size: contain;
+  background-position: center;
+  overflow: hidden;
+  cursor: pointer;
+  
 }
-
+.my-project-context{
+  position: absolute;
+  color: var(--white-color);
+}
+.my-project-context p{
+  background-color:var(--purple-color);
+  padding: 10px;
+  border: 1px solid white;
+}
+div.overlay2 {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px; 
+  pointer-events: none; 
+}
 ul {
   width: 100%;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* Đảm bảo padding và border không làm tăng chiều rộng phần tử */
   list-style-type: none;
-  /* Bỏ các dấu chấm ở đầu mỗi dòng */
 }
 
 li {
   padding: 5px;
 }
 
-/* Tùy chọn: định dạng các mục cuối cùng không có đường kẻ dưới */
 li:last-child {
   border-bottom: none;
 }
@@ -367,4 +392,51 @@ li:last-child {
 }
 .grid-item p {
   text-align: center;
+}
+/* ========= << 1250 px ========= */
+@media screen and (max-width: 1200px){
+  .my-knowledge{
+    display: inline;
+  }
+  .my-skills{
+    border-bottom: 1px solid rgb(111, 111, 111);;
+  }
+  .my-avatar{
+    width: 120px;
+    height: auto;
+  }
+}
+/* =========== <<1100 px ========== */
+@media screen and (max-width:1100px){
+  .about-me{
+    display: inline;
+  }
+  .contact-box-title {
+    font-weight: bold;
+    font-size: 20px;
+  }
+}
+/* ========== << 500 px ========== */
+@media screen and (max-width:500px){
+  header {
+    position: fixed;
+    background-color: var(--purple-color);
+    color: white;
+    text-align: center;
+    top: 0;
+    padding: 1em;
+    width: 100%;
+    height:50px;
+}
+header p{
+  color: #000;
+}
+main {
+  margin-left: 0;
+  max-width: 1100px;
+}
+.avatar{
+  width: 100px;
+  height: 100px;
+}
 }
