--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,16 @@ body {
 }
 
 /* Header Styles */
+header {
+  position: fixed;
+  background-color: var(--purple-color);
+  color: white;
+  text-align: center;
+  top: 0;
+  padding: 1em;
+  width: 16em;
+  height:100%;
+}
 .avatar {
   width: 180px;
   height: 180px;
@@ -20,6 +30,26 @@ body {
 
 .name {
   font-size: 25px;
+}
+/* scroll to top */
+#scrollToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: var(--purple-color);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+#scrollToTopBtn:hover {
+  background-color: var(--purple-color-light);
 }
 
 /* --Nav-- */
@@ -138,7 +168,6 @@ nav img.icon {
 
 .my-skills {
   flex: 1;
-  padding: 10px;
   border-radius: 10px;
   background-color: var(--white-color);
 }
@@ -146,7 +175,6 @@ nav img.icon {
 .certificate {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
   border-radius: 10px;
   margin: 0px 10px 0 10px;
   background-color: var(--white-color);
@@ -419,24 +447,24 @@ li:last-child {
 /* ========== << 500 px ========== */
 @media screen and (max-width:500px){
   header {
-    position: fixed;
-    background-color: var(--purple-color);
+    left: -300px;
     color: white;
-    text-align: center;
-    top: 0;
     padding: 1em;
-    width: 100%;
-    height:50px;
+    z-index: 100;
+
 }
-header p{
-  color: #000;
-}
+
 main {
+  position: relative;
   margin-left: 0;
   max-width: 1100px;
+  padding: 20px;
 }
 .avatar{
   width: 100px;
   height: 100px;
+}
+nav {
+  width: 90%;
 }
 }
