modified:   Index.html 	modified:   blog.html 	modified:   css/styles.css 	new file:   images/desktopapp.jpeg 	new file:   images/lock.png 	new file:   images/websiteill.jpeg 	modified:   knowledge_sharing.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,7 @@ li:last-child {
 
 .grid-item {
   position: relative;
+  cursor: pointer;
   overflow: hidden;
   border-radius: 10px;
   background-color: white;
@@ -437,6 +438,37 @@ li:last-child {
   object-position: center;
   transition: .5s ease;
 }
+.status{
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+.notification {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+}
+
+.noti-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 300px;
+  text-align: center;
+  position: relative;
+  border-radius: 8px;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -506,7 +538,12 @@ li:last-child {
     z-index: 1000;
     transition: left 0.3s;
 }
-
+.my-projects{
+  display: inline;
+}
+.my-project{
+  width: 90%;
+}
 header.show {
   left: 0; 
 }
