--- a/css/styles.css
+++ b/css/styles.css
@@ -515,6 +515,9 @@ li:last-child {
     width: 120px;
     height: auto;
   }
+  .certificate-info{
+    flex: 0.9;
+  }
 }
 /* =========== <<1100 px ========== */
 @media screen and (max-width:1100px){
@@ -528,6 +531,7 @@ li:last-child {
   #overlay{
     display: none;
   }
+  
 }
 /* ========== << 500 px ========== */
 @media screen and (max-width:500px){
@@ -537,6 +541,9 @@ li:last-child {
     padding: 1em;
     z-index: 1000;
     transition: left 0.3s;
+}
+.certificate{
+  display: inline;
 }
 .my-projects{
   display: inline;
