--- a/css/styles.css
+++ b/css/styles.css
@@ -575,3 +575,14 @@ nav {
   width: 90%;
 }
 }
+/* -------- */
+.pdf-container {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
