--- a/css/format.css
+++ b/css/format.css
@@ -7,7 +7,7 @@ html{
 }
 /*color*/
 :root {
-      --purple-color: #48126A;
+      --purple-color: #6C327F;
       --purple-color-light:#6a0dad;
       --black-color: #000000;
       --white-color: #ffffff;
