--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ html {
       --orange-color: #FCB416;
       --orange-color-light: #FFE9B9;
       --gray-color: #6d6d6d;
+      --blue-color: #1c6ea4;
+      --blue-color-light: #218dd5;
 }
 
 body {
