--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,7 @@
 <aside class="sidebar">
       <strong data-translate="contents">Contents</strong>
       <ul>
-            <li><a href="/Internet.html" data-link><img src="images/internet.jpeg" alt="Post 1"><span id="post1-title" data-translate="networkDefinitionTitle">Mạng máy tính</span></a></li>
+            <li><a href="/internet.html" data-link><img src="images/internet.jpeg" alt="Post 1"><span id="post1-title" data-translate="networkDefinitionTitle">Mạng máy tính</span></a></li>
 
            
       </ul>
