--- a/components/nav.html
+++ b/components/nav.html
@@ -1,8 +1,8 @@
 <aside class="sidebar">
-      <strong data-translate="contents">Contents</strong>
+      <div style="display: flex; justify-content: space-between; padding: 10px;align-items: center;"><strong data-translate="contents">Contents</strong></div>
       <ul>
             <li><a href="/internet.html" data-link><img src="images/internet.jpeg" alt="Post 1"><p id="post1-title" data-translate="networkDefinitionTitle">Mạng máy tính</p></a></li>
-            <!-- <li><a href="/to_cc_bcc_email_sending.html" data-link><img src="images/gmail.png" alt="Post 2"><span id="post1-title" data-translate="emailDifferencesTitle">Khác biệt giữa To, CC và BCC khi gửi Email ?</span></a></li> -->
+            <li><a href="/to_cc_bcc_email_sending.html" data-link><img src="images/gmail.png" alt="Post 2"><p id="post1-title" data-translate="emailDifferencesTitle">Khác biệt giữa To, CC và BCC khi gửi Email ?</p></a></li>
            
       </ul>
 </aside>
